[package]
name = "lnpbp_secp256k1zkp"
version = "0.7.11"
authors = [ "Grin Developers <mimblewimble@lists.launchpad.net>",
            "Dawid Ciężarkiewicz <dpc@ucore.info>",
            "Andrew Poelstra <apoelstra@wpsoftware.net>" ]
license = "CC0-1.0"
repository = "https://github.com/LNP-BP/rust-secp256k1/"
description = "LNP/BP fork of Grin version of Zero-Knowledge extensions of Rust bindings for Pieter Wuille's `libsecp256k1` library."
keywords = [ "crypto", "secp256k1", "grin", "bitcoin", "zero-knowledge" ]
readme = "README.md"
edition = "2018"
build = "build.rs"

[build-dependencies]
cc = "1.0"

[lib]
name = "lnpbp_secp256k1zkp"
path = "src/lib.rs"

[features]
default = []
unstable = []
bullet-proof-sizing = []

[dependencies]
arrayvec = { version = "0.7.2", optional = true }
rand = "0.8.5"
libc = "0.2"
rustc-serialize = { version = "0.3", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
chrono = "0.4.5"
rand_core = "0.6.4"
